# bicycle_store

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/2020-07-22-003407_bicycles/: down.sql  up.sql
src/: bikes.rs  controllers.rs  error.rs  lib.rs  main.rs  repositories.rs  schema.rs  services.rs
src/controllers/: handler.rs  model.rs  routes.rs
src/datasource/: db.rs
src/delivery/: rest.rs
src/repositories/: bicycle.rs  postgres_repo.rs
src/services/: bicycle.rs  bicycle_manager.rs
