[package]
name = "bicycle_store"
version = "0.1.0"
authors = ["Oscar <oscar@merlinjobs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
thiserror = "1.0"
lazy_static = "1.4"